force-app/main/default/objects/Product2/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area (square meters)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>