force-app/main/default/objects/Product2/fields/Balcony__c.field-meta.xml
<CustomField>
    <fullName>Balcony__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balcony</label>
    <type>Checkbox</type>
</CustomField>