force-app/main/default/objects/Product2/fields/cityCountry__c.field-meta.xml
<CustomField>
    <fullName>cityCountry__c</fullName>
    <formula>City__c+&apos;,&apos;+Country__c</formula>
    <label>cityCountry</label>
    <type>Text</type>
</CustomField>