force-app/main/default/objects/Product2/fields/Elevator__c.field-meta.xml
<CustomField>
    <fullName>Elevator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elevator</label>
    <type>Checkbox</type>
</CustomField>