force-app/main/default/objects/Product2/fields/Facilities_for_the_disabled__c.field-meta.xml
<CustomField>
    <fullName>Facilities_for_the_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facilities for the disabled</label>
    <type>Checkbox</type>
</CustomField>