force-app/main/default/objects/Product2/fields/Number_of_rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_rooms__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Number of rooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>