force-app/main/default/objects/Product2/fields/Parking_space__c.field-meta.xml
<CustomField>
    <fullName>Parking_space__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of parking spaces</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>