force-app/main/default/objects/Product2/fields/Shower_Access__c.field-meta.xml
<CustomField>
    <fullName>Shower_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shower Access</label>
    <type>Checkbox</type>
</CustomField>