force-app/main/default/objects/Product2/fields/Year_of_construction__c.field-meta.xml
<CustomField>
    <fullName>Year_of_construction__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Year of construction</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>