force-app/main/default/objects/Product2/recordTypes/Business_premise.recordType-meta.xml
<RecordType>
    <fullName>Business_premise</fullName>
    <active>true</active>
    <label>Business premise</label>
</RecordType>