force-app/main/default/objects/Product2/recordTypes/Premise_Type.recordType-meta.xml
<RecordType>
    <fullName>Premise_Type</fullName>
    <active>false</active>
    <label>Premise Type</label>
</RecordType>